# MyProjectCpp_UnitTests

./: .gitignore  README.md
My_apps/Client-Server/: CMakeLists.txt
My_apps/Client-Server/App/: CmakeLists.txt  main.cpp
My_apps/Client-Server/Impl/: CmakeLists.txt
My_apps/Client-Server/Impl/include/: MainApp.h  client.h
My_apps/Client-Server/Impl/src/: MainApp.cpp  client.cpp  server.cpp
My_apps/MyApplication/: CmakeLists.txt
My_apps/MyApplication/App/: CmakeLists.txt  main.cpp
My_apps/MyApplication/Impl/: CmakeLists.txt
My_apps/MyApplication/Impl/Additional/: STL.cpp  STL_container_adapters.cpp
My_apps/MyApplication/Impl/include/: Advanced.h  Arithemetics.h  My_App.h  array_string.h  exceptions.h  filehandling.h  main_test.h  multithreading.h  oops.h  pattern.h  pointers.h  struct_union.h  templates.h
My_apps/MyApplication/Impl/src/: Advanced.cpp  Arithemetics.cpp  My_App.cpp  array_string.cpp  exceptions.cpp  filehandling.cpp  multithreading.cpp  oops.cpp  pattern.cpp  pointers.cpp  struct_union.cpp  templates.cpp
My_apps/MyApplication/unit-test/: CmakeLists.txt  main_test.cpp  main_test.h  test_impl.cpp
My_apps/MyGame/: CMakeLists.txt
My_apps/MyGame/App/: CmakeLists.txt  main.cpp
My_apps/MyGame/Impl/: CmakeLists.txt
My_apps/MyGame/Impl/include/: MyGame.h  score.h  snake.h  walls.h
My_apps/MyGame/Impl/src/: MyGame.cpp  snake.cpp  walls.cpp
lib/input/: textfile.txt
tools/: build.sh
tools/googletest/: gtest_setup.sh
tools/googletest/gtest/build-mingw/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  (+1 more)
(+6 files in other folders)
